--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://kmshaonred:amaz11@cluster0.c2ujz8q.mongodb.net/test"
+# DATABASE_URL="mongodb+srv://kmshaonred:amaz11@cluster0.c2ujz8q.mongodb.net/test"
+NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
+NEXTAUTH_URL=http://localhost:3000
+NODE_TLS_REJECT_UNAUTHORIZED=0
